# WarmStreet

./: .gitignore  README.md
Android/: gradle.properties  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/warmstreet/: Core.kt  MainActivity.kt  WarmStreetApp.kt  WarmStreetApplication.kt
Android/app/src/main/java/com/warmstreet/capabilities/: HttpHandler.kt  KeyValueHandler.kt  LocationHandler.kt
Android/app/src/main/java/com/warmstreet/services/: WarmStreetMessagingService.kt
Android/app/src/main/java/com/warmstreet/ui/components/: GlassNavigationBar.kt  GlassSurface.kt  LiquidGlass.kt  (+1 more)
iOS/WarmStreet/: ContentView.swift  Core.swift  Info.plist  PushHandler.swift  WarmStreetApp.swift
iOS/WarmStreet/Capabilities/: CameraHandler.swift  HttpHandler.swift  KeyValueHandler.swift  LocationHandler.swift
iOS/WarmStreet/Services/: AuthService.swift
iOS/WarmStreet/Views/: CaseDetailSheet.swift  FeedView.swift  ListFeedView.swift  LocationPermissionView.swift  LoginView.swift  MapFeedView.swift  PinDropView.swift  RadiusPickerView.swift  ReadyView.swift  ReportView.swift
iOS/WarmStreet/Views/Components/: GlassView.swift  RadiusButton.swift
migrations/: 001_initial_schema.sql  002_cleanup_function.sql
shared/: Cargo.toml  errors.txt
shared/src/: crypto.rs  event.rs  image_processing.rs  lib.rs  model.rs  offline_store.rs  outbox.rs  vision.rs
shared/src/capabilities/: camera.rs  crypto.rs  http.rs  kv.rs  mod.rs  push.rs
shared/tests/: offline_outbox.rs  onboarding_flow.rs
warmstreet-api/: .neon  package-lock.json  package.json  tsconfig.json  wrangler.toml
warmstreet-api/src/: index.ts  types.ts
warmstreet-api/src/__tests__/: bootstrap-idempotency.test.ts
warmstreet-api/src/lib/: cleanup.ts  db.ts  fcm.ts  gemini.ts  idempotency.ts  push-fanout.ts  push-mute.ts  tigris.ts
warmstreet-api/src/middleware/: auth.ts  db-context.ts  idempotency.ts
warmstreet-api/src/routes/: ai.ts  cases.ts  profile.ts  uploads.ts
worker/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/src/: index.ts
(+10 files in other folders)
